# qt6_serial_debugger

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
serialBase/: CMakeLists.txt  serialBase.cpp  serialBase.h
